# climatemind-nlp

./: .gitignore  README.md  bertadditionalpretrain.ipynb  environment.yml  index.ipynb  pyproject.toml  settings.ini
cm_nlp/: Prodigy_Utils.ipynb
cm_nlp/stats/: Diversity_Analysis.ipynb
cm_nlp/utils/: CSV_Utils.ipynb  JSONL_Utils.ipynb  PocketUtils.ipynb  Pocket_Utils.ipynb  Prodigy_Utils.ipynb  README.md  Sentence_Utils.ipynb
data/: README.md
model_dev/: BERT_Climate_Classifier.ipynb  BERT_Summarizer.ipynb  Climate_Casual_Sentence_Classifier.ipynb
model_dev/data/: gold_standard.jsonl
notebooks/: climateCausalityClassifier.ipynb  diffbot_scraping_articles.ipynb  neuralcoref_finetune.ipynb  tf_to_torch.ipynb
tools/: README.md
utils/: DiffbotUtils.ipynb  JSONLUtils.ipynb  PURE_data_setup.py  PocketUtils.ipynb  README.md  analyze_jsonl.py  analyze_jsonl_change_direction.py  analyze_jsonl_longform_all_main_entitites.py  analyze_jsonl_type_of.py  annotated_csv_to_jsonl.py  climate_concept_clustering_for_semantic_equivalence.py  csv_to_jsonl.py  custom_entity_extractor.ipynb  deduplicate_edges.py  diffbot_scraping_articles.ipynb  diffbot_scraping_articles.py  diversity_analysis.py  get_answer.py  grade_base_typeof.py  grade_bases.py  grade_entities.py  hf_data_setup.py  interannotator_agreement_analysis.py  interannotator_agreement_consensus_analysis.py  interannotator_agreement_data_setup.py  networkx_and_owl_tools.py  pocket_extract.py  process_extracted_text.py  semantic_clustering.py  sentence_organizing.py  spacy_data_setup.py  split_sentences.py
(+99 files in other folders)
