[tool.poetry]
name = "ClimateMind NLP Repo"
version = "0.1.0"
description = "The monorepo for the ClimateMind NLP team which houses the tools, models, & notebookes used for the project"
authors = ["ClimateMind NLP Team"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^0.73.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
