[project]
name = "ClimateMind NLP"
version = "0.1.0"
description = "Code for ClimateMind's NLP efforts"
authors = [
    "Anthony Hevia",
    "Mukut Mukherjee",
    "Himesh Buch",
    "Nikita Bhutani",
    "Shweta Khushu",
    "Kameron Rodrigues"
]
license = "MIT"
readme = "README.md"
python = "^3.8"
homepage = ""
repository = ""
documentation = ""

# Requirements
[dependencies]
apiclient = "1.0.4"
black = "20.8b1"
conda = "4.3.16"
google-api-python-client = "1.12.8"
graphviz = "0.14.1"
matplotlib = "3.3.0"
networkx = "2.4"
numpy = "1.19.0"
oauth2client = "4.1.3"
Owlready2 = "0.24"
pandas = "1.0.5"
plotly = "4.9.0"
pylint = "2.6.0"
pygraphviz = "1.6"
pytest = "6.0.2"
requests = "2.24.0"
scikit-learn = "0.24.0"
scipy = "1.5.2"
tensorflow = "2.4.0"
urllib3 = "1.25.9"
validators = "0.18.2"
